--- a/main.html
+++ b/main.html
@@ -135,50 +135,50 @@
 				<div class="hero-item set-bg" data-setbg="img/hero/5.jpg">
 					<div class="pa-text">
 						<div class="pa-tag">Prasad photography</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<h2>Passionate Photographer</h2>
 						<div class="pa-author">
 							<img src="img/Hero/author.jpg" alt="">
-							<h4>Prasad</h4>
+							<h4>-Prasad</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/1.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">prasad photography</div>
+						<h2>Macro Photography</h2>
 						<div class="pa-author">
 							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<h4>-Prasad</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/2.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">prasad photography</div>
+						<h2>Nature Photography</h2>
 						<div class="pa-author">
 							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<h4>-Prasad</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/3.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">prasad photography</div>
+						<h2>WildLife Photography</h2>
 						<div class="pa-author">
 							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<h4>-Prasad</h4>
 						</div>
 					</div>
 				</div>
 				<div class="hero-item set-bg" data-setbg="img/hero/4.jpg">
 					<div class="pa-text">
-						<div class="pa-tag">people</div>
-						<h2>69 Flavio Burg Suite</h2>
+						<div class="pa-tag">prasad photography</div>
+						<h2>Creative Photography</h2>
 						<div class="pa-author">
 							<img src="img/Hero/author.jpg" alt="">
-							<h4>Arthur Rose</h4>
+							<h4>-Prasad</h4>
 						</div>
 					</div>
 				</div>
