--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			
 			<a href="index.html" class="site-logo">
 				
-				<img src="img/logo.jpg" alt="">
+				<img src="img/logo.png" alt="">
 				
 			</a>
 		</div>
