--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Prasad Photography</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Tulen Photography HTML Template"">
+	<meta name="description" content="Prasad Photography"">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
