--- a/gallery.html
+++ b/gallery.html
@@ -56,6 +56,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="gallery.html" class="active">Gallery</a></li>
+				<li><a href="https://prasadphotographymysore.business.site/">Contact US</a></li>
 				
 			</ul>
 		</nav>
