--- a/gallery.html
+++ b/gallery.html
@@ -49,7 +49,7 @@
 				<i class="ti-arrow-left"></i>
 			</div>
 			<a href="index.html" class="site-logo">
-				<img src="img/logo.jpg" alt="">
+				<img src="img/logo.png" alt="">
 			</a>
 		</div>
 		<nav class="main-menu">
