--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Prasad Photography</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="Tulen Photography HTML Template"">
+	<meta name="description" content="Prasad photography"">
 	<meta name="keywords" content="photo, html">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Stylesheets -->
@@ -186,7 +186,7 @@
 					</div>
 				</div>
 				<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/12.jpg" data-fresco-group="projects">
 						<img src="img/gallery/12.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -195,7 +195,7 @@
 					</div>
 				</div>
 				<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/13.jpg" data-fresco-group="projects">
 						<img src="img/gallery/13.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -204,7 +204,7 @@
 					</div>
 				</div>
 				<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/14.jpg" data-fresco-group="projects">
 						<img src="img/gallery/14.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -214,7 +214,7 @@
 				</div>
 
 			<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/15.jpg" data-fresco-group="projects">
 						<img src="img/gallery/15.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -225,7 +225,7 @@
 
 
 			<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/16.jpg" data-fresco-group="projects">
 						<img src="img/gallery/16.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -234,7 +234,7 @@
 					</div>
 				</div>
 			<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/17.jpg" data-fresco-group="projects">
 						<img src="img/gallery/17.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -243,7 +243,7 @@
 					</div>
 				</div>
 			<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/18.jpg" data-fresco-group="projects">
 						<img src="img/gallery/18.jpg" alt="">
 					</a>
 					<div class="gi-hover">
@@ -252,7 +252,7 @@
 					</div>
 				</div>
 			<div class="gallery-item people">
-					<a class="fresco" href="img/gallery/8.jpg" data-fresco-group="projects">
+					<a class="fresco" href="img/gallery/19.jpg" data-fresco-group="projects">
 						<img src="img/gallery/19.jpg" alt="">
 					</a>
 					<div class="gi-hover">
