--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<ul>
 				<li><a href="index.html" class="active">Home</a></li>
 				<li><a href="gallery.html">Gallery</a></li>
-				<li><a href="https://prasadphotographymysore.business.site/" class="active">Contact Us</a></li>
+				<li><a href="https://prasadphotographymysore.business.site/">Contact Us</a></li>
 				
 			</ul>
 		</nav>
