--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						<div class="pa-tag">Prasad Photography</div>
 						<h2>Passionate Photographer</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>Prasad</h4>
 						</div>
 					</div>
@@ -94,7 +94,7 @@
 						<div class="pa-tag">Prasad Photography</div>
 						<h2>Macro Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>Prasad</h4>
 						</div>
 					</div>
@@ -104,7 +104,7 @@
 						<div class="pa-tag">Prasad photography</div>
 						<h2>Nature Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>Prasad</h4>
 						</div>
 					</div>
@@ -114,7 +114,7 @@
 						<div class="pa-tag">Prasad photography</div>
 						<h2>WildLife Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>Prasad</h4>
 						</div>
 					</div>
@@ -124,7 +124,7 @@
 						<div class="pa-tag">Prasad photography</div>
 						<h2>Creative Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>Prasad</h4>
 						</div>
 					</div>
@@ -138,7 +138,7 @@
 						<div class="pa-tag">Prasad photography</div>
 						<h2>Passionate Photographer</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>-Prasad</h4>
 						</div>
 					</div>
@@ -148,7 +148,7 @@
 						<div class="pa-tag">prasad photography</div>
 						<h2>Macro Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>-Prasad</h4>
 						</div>
 					</div>
@@ -158,7 +158,7 @@
 						<div class="pa-tag">prasad photography</div>
 						<h2>Nature Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>-Prasad</h4>
 						</div>
 					</div>
@@ -168,7 +168,7 @@
 						<div class="pa-tag">prasad photography</div>
 						<h2>WildLife Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>-Prasad</h4>
 						</div>
 					</div>
@@ -178,7 +178,7 @@
 						<div class="pa-tag">prasad photography</div>
 						<h2>Creative Photography</h2>
 						<div class="pa-author">
-							<img src="img/Hero/author.jpg" alt="">
+							<img src="img/hero/author.jpg" alt="">
 							<h4>-Prasad</h4>
 						</div>
 					</div>
